# NLI_Project

./: .gitignore  Dockerfile  Doxyfile  Pipfile  README.md  _config.yaml  app.py  install.sh  pyproject.toml  run.sh  test.py
data/: data.csv  log.ini
dialogue-acts/: resturant_search.py
dm_core/: ct_interest.py  ct_restaurant.py  main.py  utils.py
doc/: mermaid_diagrams.md  requirements_linux.md
doc/html/: README_8md.html  annotated.html  classct__interest_1_1ConversationTracker-members.html  classct__interest_1_1ConversationTracker.html  classct__restaurant_1_1ConversationTracker-members.html  classct__restaurant_1_1ConversationTracker.html  classes.html  classmain_1_1DMCore-members.html  classmain_1_1DMCore.html  classmain_1_1SPCore-members.html  classmain_1_1SPCore.html  classnlg__core_1_1main_1_1Map-members.html  classnlg__core_1_1main_1_1Map.html  classnlg__core_1_1main_1_1Map__inherit__graph.map  classnlg__core_1_1main_1_1Map__inherit__graph.md5  classnlu__core_1_1main_1_1NLUCore-members.html  classnlu__core_1_1main_1_1NLUCore.html  classnlu__core_1_1test__main_1_1TestNLUCoreMethods-members.html  classnlu__core_1_1test__main_1_1TestNLUCoreMethods.html  ct__interest_8py.html  files.html  (+53 more)
imutils/: dmanager.py
nlg_core/: main.py
nlu_core/: main.py  test_main.py
notebooks/: 0_Project_Architecture.ipynb  1_Initial_test.ipynb  2_Facts_Provider.ipynb  2_test.ipynb  3_Training_Core.ipynb  4_Project_Archiecture_test.ipynb  5_Reinforcement_Learning.ipynb  data.csv
sp_recognition/: main.py
synt_sem_analysis/: main.py
templates/: chat.html  index.html
(+70 files in other folders)
